Fix calculation of next due date

In case the option "Process this schedule always on the last day of a
month" is active, the next due date was not calculated correctly in all
cases.

BUG: 447025
FIXED-IN: 5.1.3